build.gradle add buildConfigField

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,19 @@ android {
         versionName "1.0"
     }
     buildTypes {
+
+        debug {
+            buildConfigField "Boolean", "MOCK_SERVER", "true"
+            buildConfigField "String", "LOGIN", "\"anton\""
+            buildConfigField "String", "PASS", "\"8816880\""
+
+        }
+
         release {
+            buildConfigField "Boolean", "MOCK_SERVER", "false"
+            buildConfigField "String", "LOIGN", "\"anton\""
+            buildConfigField "String", "PASS", "\"8816880\""
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
