--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".LoginActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -21,6 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".wall.WallActivity">
+        </activity>
+        <activity android:name=".registration.RegistrationActivity">
         </activity>
     </application>
 
