--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         </activity>
         <activity android:name=".wall.WallActivity">
         </activity>
-        <activity android:name=".registration.RegistrationActivity">
+        <activity
+            android:name=".registration.RegistrationActivity"
+            android:label="Registration">
         </activity>
     </application>
 
