--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".wall.WallActivity">
+        <activity
+            android:name=".wall.WallActivity"
+            android:label="Wall">
         </activity>
         <activity
             android:name=".registration.RegistrationActivity"
