--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField "String", "POSTS_URL", "\"/posts\""
         buildConfigField "String", "LOGIN_URL", "\"/oauth/token\""
         buildConfigField "String", "GRANT_TYPE", "\"grant_type\""
         buildConfigField "String", "CLIENT_ID", "\"client_id\""
