--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
 
     compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.0'
 
+    compile 'org.greenrobot:eventbus:3.0.0'
+
 }
