--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,11 @@ android {
     }
 }
 
+apt {
+    arguments {
+        eventBusIndex "com.example.myapp.MyEventBusIndex"
+    }
+
 def supportLibraryVersion = '24.1.1'
 def retrofitVersion = '2.0.1'
 def butterKnifeVersion = '8.1.0'
@@ -81,5 +86,9 @@ dependencies {
     compile "com.github.bumptech.glide:glide:$glideVersion"
 
     compile "com.github.dmytrodanylyk.android-process-button:library:$processButtonVersion"
+
+    compile 'org.greenrobot:eventbus:3.0.0'
+    apt 'org.greenrobot:eventbus-annotation-processor:3.0.1'
+}
 
 }
