Add NewPostActivity with Fragment Refactor post layouts change ImageButton to ImageView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -19,13 +20,25 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.wall.WallActivity"
             android:label="@string/activity_label_wall">
         </activity>
+
         <activity
             android:name=".ui.registration.RegistrationActivity"
             android:label="@string/activity_label_registration">
+        </activity>
+
+        <activity android:name=".ui.newpost.NewPostActivity"
+                  android:label="@string/activity_label_new_post"
+                  android:parentActivityName=".ui.wall.WallActivity"
+                  android:theme="@style/NewPostTheme"
+                  android:windowSoftInputMode="stateVisible|adjustResize">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.wall.WallActivity"/>
         </activity>
 
     </application>
