--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,9 +39,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.wall.WallActivity"/>
         </activity>
-        <activity android:name=".ui.profile.ProfileActivity"
-                  android:label="@string/activity_label_profile"
-        >
+        <activity
+            android:name=".ui.profile.ProfileActivity"
+            android:label="@string/activity_label_profile">
+        </activity>
+        <activity android:name=".ui.settings.SettingsActivity"
+                  android:label="@string/activity_label_settings">
         </activity>
     </application>
 
