--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,27 @@
+buildscript {
+    repositories {
+        jcenter()
+        maven { url 'https://maven.fabric.io/public' }
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.1.2'
+        // The Fabric Gradle plugin uses an open ended version to react
+        // quickly to Android tooling updates
+        classpath 'io.fabric.tools:gradle:1.21.2'
+    }
+}
+
+repositories {
+    jcenter()
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'realm-android'
+apply plugin: 'io.fabric'
+
 
 android {
     compileSdkVersion 24
@@ -18,6 +38,16 @@ android {
         buildConfigField "String", "PASS", "\"user\""
 
     }
+
+    signingConfigs {
+        release {
+            storeFile file("SocialNetworkKey.jks")
+            storePassword "exposit"
+            keyAlias "ByToni777GrodnoPAI95"
+            keyPassword "toni777570058"
+        }
+    }
+
     buildTypes {
 
         debug {
@@ -25,19 +55,19 @@ android {
         }
 
         release {
-            buildConfigField "String", "BASE_URL", "\"https://sjc2016vs2.fwd.wf\""
-
+            buildConfigField "String", "BASE_URL", "\"https://sjc2016vs5.fwd.wf/\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 
-    productFlavors {
-        lollipop {
-            versionName "0.0.1.-lollipop"
-            minSdkVersion 21
-        }
-    }
+//    productFlavors {
+//        lollipop {
+//            versionName "0.0.1.-lollipop"
+//            minSdkVersion 21
+//        }
+//    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -92,6 +122,10 @@ dependencies {
 
     compile "org.greenrobot:eventbus:$eventBusVersion"
     apt "org.greenrobot:eventbus-annotation-processor:$eventBusAPVersion"
+
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.2@aar') {
+        transitive = true;
+    }
 }
 
 
