--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,10 @@
         <activity android:name=".ui.settings.SettingsActivity"
                   android:label="@string/activity_label_settings">
         </activity>
+
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="17ab9477201e77021e8493a8afa0dee20111d054" />
     </application>
 
 </manifest>
