--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,13 +43,18 @@
             android:name=".ui.profile.ProfileActivity"
             android:label="@string/activity_label_profile">
         </activity>
-        <activity android:name=".ui.settings.SettingsActivity"
-                  android:label="@string/activity_label_settings">
+        <activity
+            android:name=".ui.settings.SettingsActivity"
+            android:label="@string/activity_label_settings">
         </activity>
 
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="17ab9477201e77021e8493a8afa0dee20111d054" />
+            android:value="17ab9477201e77021e8493a8afa0dee20111d054"/>
+
+        <activity android:name=".ui.people.FriendsActivity"
+                  android:label="@string/activity_label_friends">
+        </activity>
     </application>
 
 </manifest>
