Add Group Search

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,10 +52,11 @@ android {
 
         debug {
             buildConfigField "String", "BASE_URL", "\"https://sjc2016vs6.fwd.wf/\""
+//            buildConfigField "String", "BASE_URL", "\"https://scntw.herokuapp.com/\""
         }
 
         release {
-            buildConfigField "String", "BASE_URL", "\"https://sjc2016vs6.fwd.wf/\""
+            buildConfigField "String", "BASE_URL", "\"https://scntw.herokuapp.com/\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
