--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/BaseTheme">
+
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -21,14 +22,17 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.wall.WallActivity"
             android:label="@string/activity_label_wall">
         </activity>
+
         <activity
             android:name=".ui.registration.RegistrationActivity"
             android:label="@string/activity_label_registration">
         </activity>
+
         <activity
             android:name=".ui.newpost.NewPostActivity"
             android:label="@string/activity_label_new_post"
@@ -39,10 +43,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.wall.WallActivity"/>
         </activity>
+
         <activity
             android:name=".ui.profile.ProfileActivity"
             android:label="@string/activity_label_profile">
         </activity>
+
         <activity
             android:name=".ui.settings.SettingsActivity"
             android:label="@string/activity_label_settings">
@@ -56,16 +62,22 @@
             android:name=".ui.friends.FriendsActivity"
             android:label="@string/activity_label_friends">
         </activity>
+
         <activity
             android:name=".ui.search.persons.PersonsActivity"
-            android:parentActivityName=".ui.friends.FriendsActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.friends.FriendsActivity"/>
+            android:label="@string/activity_label_persons">
+
         </activity>
-        <activity android:name=".ui.groups.GroupsActivity"
-                  android:label="@string/activity_label_groups">
+
+        <activity
+            android:name=".ui.groups.GroupsActivity"
+            android:label="@string/activity_label_groups">
         </activity>
+
+        <activity android:name=".ui.search.groups.SearchGroupsActivity"
+                  android:label="@string/activity_label_search_groups">
+        </activity>
+
     </application>
 
 </manifest>
