--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,8 @@ android {
     buildTypes {
 
         debug {
-            buildConfigField "String", "BASE_URL", "\"https://sjc2016vs6.fwd.wf/\""
-//            buildConfigField "String", "BASE_URL", "\"https://scntw.herokuapp.com/\""
+//            buildConfigField "String", "BASE_URL", "\"https://sjc2016vs6.fwd.wf/\""
+            buildConfigField "String", "BASE_URL", "\"https://scntw.herokuapp.com/\""
         }
 
         release {
