--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'realm-android'
 apply plugin: 'io.fabric'
+apply plugin: 'com.google.gms.google-services'
 
 
 android {
@@ -33,6 +34,7 @@ android {
         targetSdkVersion 24
         versionCode 6
         versionName "0.0.6"
+        multiDexEnabled true
 
         buildConfigField "String", "LOGIN", "\"user\""
         buildConfigField "String", "PASS", "\"user\""
@@ -93,6 +95,8 @@ def rxAndroidVersion = '1.1.0'
 def annotationJSRVersion = '1.0'
 def eventBusVersion = '3.0.0'
 def eventBusAPVersion = '3.0.1'
+def firebaseVersion = '9.0.1'
+def multidexVersion = '1.0.0'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -127,6 +131,13 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.6.2@aar') {
         transitive = true;
     }
+
+    compile "com.google.firebase:firebase-storage:$firebaseVersion"
+    compile "com.google.firebase:firebase-auth:$firebaseVersion"
+    compile "com.google.firebase:firebase-database:$firebaseVersion"
+    compile "com.google.firebase:firebase-messaging:$firebaseVersion"
+
+    compile "com.android.support:multidex:$multidexVersion"
 }
 
 
