Update base_url for realize build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ android {
         }
 
         release {
-            buildConfigField "String", "BASE_URL", "\"https://scntw.herokuapp.com/\""
+            buildConfigField "String", "BASE_URL", "\"https://sjc2016vs7.fwd.wf/\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
