--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:name=".app.SocialNetworkApp"
@@ -65,14 +65,13 @@
             android:name=".ui.groups.GroupsActivity"
             android:label="@string/activity_label_groups">
         </activity>
-
         <activity
             android:name=".ui.search.groups.SearchGroupsActivity"
             android:label="@string/activity_label_search_groups">
         </activity>
-
-        <activity android:name=".ui.group.GroupActivity"
-                  android:label="@string/activity_label_group">
+        <activity
+            android:name=".ui.group.GroupActivity"
+            android:label="@string/activity_label_group">
         </activity>
 
         <service android:name=".push.SONFirebaseMessagingService">
@@ -86,11 +85,16 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".ui.notification.NotificationSettingsActivity"
-                  android:label="@string/activity_label_notification_settings">
+        <activity
+            android:name=".ui.notification.NotificationSettingsActivity"
+            android:label="@string/activity_label_notification_settings">
         </activity>
-        <activity android:name=".ui.appinfo.AppInfoActivity"
-                  android:label="@string/activity_label_app_info">
+        <activity
+            android:name=".ui.appinfo.AppInfoActivity"
+            android:label="@string/activity_label_app_info">
+        </activity>
+        <activity android:name=".ui.friend.FriendActivity"
+                  android:label="@string/activity_label_friend">
         </activity>
     </application>
 
