--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,8 +97,12 @@
             android:name=".ui.friend.FriendActivity"
             android:label="@string/activity_label_friend">
         </activity>
-        <activity android:name=".ui.messages.MessagesActivity"
-                  android:label="@string/activity_label_messages">
+        <activity
+            android:name=".ui.messages.MessagesActivity"
+            android:label="@string/activity_label_messages">
+        </activity>
+        <activity android:name=".ui.chat.ChatActivity"
+                  android:label="@string/activity_label_chat">
         </activity>
     </application>
 
