Finish update group view add show group information

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ android {
         }
 
         release {
-            buildConfigField "String", "BASE_URL", "\"https://sjc2016vs9.fwd.wf/\""
+            buildConfigField "String", "BASE_URL", "\"http://social2.fwd.wf\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
