--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ android {
         }
 
         release {
-            buildConfigField "String", "BASE_URL", "\"http://social2.fwd.wf\""
+            buildConfigField "String", "BASE_URL", "\"https://sjc2016vs9.fwd.wf/\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
@@ -105,6 +105,7 @@ def eventBusAPVersion = '3.0.1'
 def firebaseVersion = '9.0.1'
 def multidexVersion = '1.0.0'
 def materialEditTextVersion = '2.1.4'
+def fabVersion = '1.10.1'
 
 
 dependencies {
@@ -152,6 +153,8 @@ dependencies {
     compile "com.android.support:multidex:$multidexVersion"
 
     compile "com.rengwuxian.materialedittext:library:$materialEditTextVersion"
+
+    compile "com.getbase:floatingactionbutton:$fabVersion"
 }
 
 
