--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,8 @@ android {
         applicationId "by.grodno.toni7777.socialnetwork"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 12
-        versionName "0.1.2"
+        versionCode 14
+        versionName "0.1.4"
         multiDexEnabled true
 
         buildConfigField "String", "LOGIN", "\"user\""
@@ -53,12 +53,12 @@ android {
     buildTypes {
 
         debug {
-            buildConfigField "String", "BASE_URL", "\"https://sjc2016vs8.fwd.wf/\""
+            buildConfigField "String", "BASE_URL", "\"https://aur-sjc2016vs10.fwd.wf/\""
         }
 
         release {
 //            buildConfigField "String", "BASE_URL", "\"http://192.168.7.121:8080/\""
-            buildConfigField "String", "BASE_URL", "\"https://sjc2016vs10.fwd.wf/\""
+            buildConfigField "String", "BASE_URL", "\"https://aur-sjc2016vs10.fwd.wf/\""
             //192.168.7.121:8080
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
