Update sex choice

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,8 @@ android {
         }
 
         release {
-            buildConfigField "String", "BASE_URL", "\"http://192.168.7.121:8080\""
-//            buildConfigField "String", "BASE_URL", "\"https://sjc2016vs10.fwd.wf/\""
+//            buildConfigField "String", "BASE_URL", "\"http://192.168.7.121:8080\""
+            buildConfigField "String", "BASE_URL", "\"https://sjc2016vs10.fwd.wf/\""
             //192.168.7.121:8080
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
